add, harden unit tests